# This is the full fwbackups changelog, with detailed listing of changes between
# various versions dating all the way back from the very beginning.
|| Version 1.43.3 changes ||
  * Tue Jun 22 2010 Stewart Adam <s.adam at diffingo.com>
    - Make the backup options tab much easier to use by reworking the engine
      selection.
    
  * Sat Apr 24 2010 Stewart Adam <s.adam at diffingo.com>
    - Fix a bug where the sensitivity of the incremental checkbutton was
      incorrectly set when configuring a new backup set
  
  * Thu Apr 22 2010 Stewart Adam <s.adam at diffingo.com>
    - Fix a regression where calling "fwbackups --help" resulted in a traceback
    - Change behaviour of "--verbosity" option, making it print log messages to
      the console. A second use of "--verbosity" will enable debug messages 
      (the previous behaviour of this option) as well as printing log messages
      to the console.
    
  * Wed Apr 21 2010 Stewart Adam <s.adam at diffingo.com>
    - HIG changes: Make all dialogs use application icon, better primary texts,
      make info/confirm/warning/error dialogs have no title
  
  * Sun Apr 18 2010 Stewart Adam <s.adam at diffingo.com>
    - Fix crash when resetting "don't show me" messages in preferences (fixes
      RH #579143)
    - Make .desktop files confirm to latest Freedesktop standards
  
  * Tue Dec 22 2009 Stewart Adam <s.adam at diffingo.com>
    - Fix a bug where the Preferences configuration file's version was not
      bumped past 1.43.3rc2

  * Sun Aug 30 2009 Stewart Adam <s.adam at diffingo.com>
    - Actually fix bug on Ubuntu which caused writing package lists to fail
      (aka __init__.py vs __init__.py.in copy/paste forgetfulness)

|| Version 1.43.3rc4 changes ||
  * Sat Aug 22 2009 Stewart Adam <s.adam at diffingo.com>
    - Revert fwbackups python package installation to site-packages (fixes RH
      #518690)
    - Show a message in the GUI statusbar whenever the crontab is regenerated